<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">EboxClient</string>
    <string name="pub_inputTel">手机号</string>
    <string name="pub_inputTel2">请输入您的手机号</string>
    <string name="pub_inputVerify">验证码</string>
    <string name="pub_username">请输入手机号</string>
    <string name="pub_password">请输入密码</string>
    <string name="pub_ok">确 定</string>
    <string name="pub_cancel">取 消</string>
    <string name="pub_check_config">请检查"/mnt/sdcard/config.properties"文件</string>
    <string name="pub_please_wait">loading...</string>
    <string name="pub_connect_failed">请求网络失败,请稍后再试!</string>
    <string name="pub_telephone_error">请输入正确的手机号码</string>
    <string name="pub_voice_send_ok">语音验证码发送成功</string>
    <string name="pub_input_not_same">两次输入的号码不一致</string>
    <string name="pub_username_error">请输入正确的用户名</string>
    <string name="pub_passwd_error">请输入正确的密码</string>
    <string name="pub_username_passwd_error">请输入正确的用户名或者密码</string>
    <string name="pub_image_desc">图片描述</string>
    <string name="pub_fmt_dawn">凌晨</string>
    <string name="pub_fmt_morning">早上</string>
    <string name="pub_fmt_noon">中午</string>
    <string name="pub_fmt_afternoon">下午</string>
    <string name="pub_fmt_evening">晚上</string>
    <string name="pub_fmt_pre_yesterday">昨天</string>
    <string name="pub_service">便民服务</string>
    <string name="pub_huozhan">格格云店</string>
    <string name="pub_taobao">淘宝网</string>
    <string name="pub_sure_to_quit">确认退出？</string>
    <string name="pub_quit">退出</string>
    <string name="pub_sure_to_retry">网络连接失败，重试一次？</string>
    <string name="pub_back">返回</string>
    <string name="pub_help">帮助</string>
    <string name="pub_skip">跳        过</string>
    <string name="ex_operator_login">快递员登录</string>
    <string name="ex_operator_login_by_card">请刷卡登陆</string>
    <string name="ex_change_tel_login">使用手机号登陆</string>
    <string name="ex_account_not_active">您的账户没有激活，请联系客服，谢谢！</string>
    <string name="ex_account_locked">您的账户已被锁定，请联系客服，谢谢！</string>
    <string name="ex_verify_error">请输入6位验证码</string>
    <string name="ex_open_door">开    门</string>
    <string name="ex_hint_cloose_door">关门提示</string>
    <string name="ex_login_success">登录成功！</string>
    <string name="ex_timeout_empty">暂时没有超时快递需要处理</string>
    <string name="ex_input_barcode">请扫描快件</string>
    <string name="ex_telephone">收件人电话    </string>
    <string name="ex_telephone_again">再次输入收件人电话</string>
    <string name="ex_select_box">请选择箱体</string>
    <string name="ex_big_box">已选择大号:</string>
    <string name="ex_middle_box">已选择中号:</string>
    <string name="ex_tiny_box">已选择微号:</string>
    <string name="ex_little_box">已选择小号:</string>
    <string name="ex_tip_header">提示：取件请返回，在用户取件界面进行取件操作</string>
    <string name="ex_tip_pick">提示：回收后如需再次派件请返回重新投递</string>
    <string name="ex_delivery_success">投递成功！</string>
    <string name="ex_confirm_open_door">打开柜门</string>
    <string name="ex_login">登       录</string>
    <string name="ex_pick">取       件</string>
    <string name="ex_confirm">确        认</string>
    <string name="ex_deliver_box">箱门</string>
    <string name="ex_deliver_time">投放时间</string>
    <string name="ex_deliver_barcode">运单编号</string>
    <string name="ex_deliver_telephone">用户手机</string>
    <string name="ex_deliver_phone">快递员手机</string>
    <string name="ex_scan_prompt">请将快递条形码对准扫描口扫描</string>
    <string name="ex_box_state_close">关闭</string>
    <string name="ex_box_state_open">打开</string>
    <string name="ex_box_state_unknow">未知</string>
    <string name="ex_deal">取回快件</string>
    <string name="ex_agree">同意</string>
    <string name="ex_refuse">拒绝</string>
    <string name="ex_box_state_show"><xliff:g id="door">%s</xliff:g> 	   	号 <xliff:g id="state">%s</xliff:g></string>
    <string name="ex_confirm_deliver">确认投递</string>
    <string name="ex_has_item">(已存)</string>
    <string name="ex_rack">组</string>
    <string name="ex_door">号门</string>
    <string name="ex_has_time">您有超时件未处理，请先处理超时件，谢谢</string>
    <string name="ex_no_enought_balance">您的帐号余额不足，请先充值，谢谢</string>
    <string name="ex_balance">您的账户余额: </string>
    <string name="ex_balance_not_enough">余额不足</string>
    <string name="ex_verify_prompt">请输入手机收到的6位提取码</string>
    <string name="ex_delivering">箱门已打开，请您将快件放入格中，并关闭箱门</string>
    <string name="ex_pickup_box">请您点击“开门”按钮，打开箱门取走您的快递并关好箱门，谢谢您的合作！</string>
    <string name="ex_pickup_success">已打开，谢谢使用！</string>
    <string name="ex_withdraw_success">请取出您的快递并关好箱门，谢谢您的合作！</string>
    <string name="ex_operate">操作</string>
    <string name="ex_system_err">操作失败，请您稍后再试</string>
    <string name="ex_system_init">系统初始化中，请稍后再试！</string>
    <string name="ex_item_query">输入手机号/单号查询</string>
    <string name="ex_query">查        询</string>
    <string name="ex_query_balance">查看余额</string>
    <string name="ex_barcode">运单号:</string>
    <string name="ex_recharge_number">充值账户 :</string>
    <string name="ex_rechage_dnomi">选择充值面额：</string>
    <string name="ex_recharge">充        值</string>
    <string name="ex_recharge_thin">充值</string>
    <string name="ex_recharge_record">充值记录</string>
    <string name="ex_no_result">没有查到符合条件的快递</string>
    <string name="ex_send_sucess">发送成功</string>
    <string name="ex_resend_sms">重发提取码</string>
    <string name="ex_send_sms"><h1>短信</h1>\n提取码</string>
    <string name="ex_send_voice"><h1>语音</h1>\n提取码</string>
    <string name="ex_old_pwd">旧密码</string>
    <string name="ex_new_pwd">新密码</string>
    <string name="ex_new_pwd_again">再次输入密码</string>
    <string name="ex_ok_long">确        认</string>
    <string name="ex_ali_pay">支付宝支付</string>
    <string name="ex_pay_type">支付方式</string>
    <string name="ex_weixin_pay">微信支付</string>
    <string name="ex_ok">确认</string>
    <string name="ex_cancel">取消</string>
    <string name="ex_input_old_pwd">请输入旧密码</string>
    <string name="ex_input_new_pwd">确认新密码</string>
    <string name="ex_input_new_pwd_again">请再次输入密码</string>
    <string name="ex_pwd_not_same">两次输入的密码不一致</string>
    <string name="ex_change_success">修改成功</string>
    <string name="ex_forget_pwd">忘记密码</string>
    <string name="ex_select_org">快递公司选择</string>
    <string name="ex_get_verify">获取验证码</string>
    <string name="ex_error_verify">验证码错误</string>
    <string name="ex_hint_verify">请输入验证码</string>
    <string name="ex_get_verify_success">获取成功</string>
    <string name="ex_start_date">开始日期</string>
    <string name="ex_last_page">上一页</string>
    <string name="ex_next_page">下一页</string>
    <string name="ex_page_all">第 <xliff:g id="index">%s</xliff:g> 	   	页（共 <xliff:g id="all">%s</xliff:g>页）</string>
    <string name="ex_status">订单状态</string>
    <string name="ex_register">注册</string>
    <string name="ex_org">快递公司</string>
    <string name="ex_register_success">恭喜您，注册成功!</string>
    <string name="ex_register_long">注        册</string>
    <string name="ex_empyt_box">空闲 <xliff:g id="door">（%s）</xliff:g></string>
    <string name="ex_big">大</string>
    <string name="ex_middle">中</string>
    <string name="ex_little">小</string>
    <string name="ex_rack_seq"><xliff:g id="door"> %s</xliff:g>    组</string>
    <string name="ex_i_pickup">用户取件</string>
    <string name="ex_i_query">快递查询</string>
    <string name="ex_i_orgselect">请选择快递公司</string>
    <string name="ex_i_delivery">派件</string>
    <string name="ex_operator">快递员派件</string>
    <string name="ex_scanpickup">扫码开柜</string>
    <string name="ex_sms_voice1">短信收不到，试试</string>
    <string name="ex_sms_voice">语音验证码</string>
    <string name="ex_op_delivery">派 件</string>
    <string name="ex_op_delivery_item_id">请扫码或输入运单号</string>
    <string name="ex_op_delivery_customer">请输入用户手机号</string>
    <string name="ex_op_delivery_customer_again">请再次输入用户手机号</string>
    <string name="ex_op_delivery_select_box">请选择柜门大小 :</string>
    <string name="ex_op_delivery_select_manual">手工选择</string>
    <string name="ex_op_delivery_open">打开柜门</string>
    <string name="ex_op_delivery_finish">投递已完成</string>
    <string name="ex_time">时间</string>
    <string name="ex_money">金额</string>
    <string name="ex_open_door_text1">已经为您打开</string>
    <string name="ex_open_door_text2">门</string>
    <string name="ex_open_door_text3">请关闭箱并门点击确认投递，完成派件！</string>
    <string name="ex_open_door_text4">请及时取走您的快递,请记得关闭箱门哟</string>
    <string name="ex_op_withdraw">快件回收</string>
    <string name="ex_op_withdraw_confirm">确认回收</string>
    <string name="ex_op_history_order">投递记录</string>
    <string name="ex_op_history_order_input_hint">请输入运单号或手机号</string>
    <string name="ex_op_recharge">充值</string>
    <string name="ex_op_change_pwd">修改密码</string>
    <string name="ex_op_down_app">快递员APP</string>
    <string name="ex_op_help">帮助</string>
    <string name="ex_op_balance">余额 :<xliff:g>%s</xliff:g></string>
    <string name="ex_op_state">状态 :正常</string>
    <string name="ex_pls_input">重置密码</string>
    <string name="ex_reg_reset">重新设置密码</string>
    <string name="ex_reg_confirm">确认新密码</string>
    <string name="ex_registe_title">注册账号</string>
    <string name="ex_registe_setpwd">设置密码</string>
    <string name="ex_registe_confirmpwd">再次确认密码</string>
    <string name="ex_oper_page">快递员操作主页</string>
    <string name="ex_change_pwd_prompt">请输入旧密码和新密码</string>
    <string name="ex_query_prompt">请选择查询的开始日期和截至日期(提供一个月记录查询)</string>
    <string name="ex_deliver_prompt">请填写用户手机号并选择合适箱柜</string>
    <string name="ex_box_free">空闲(%s)</string>
    <string name="ex_protocol_title">《使用协议》</string>
    <string name="ex_protocol">   \n\n        在您使用产品之前，请仔细阅读本协议，如果您使用了本产品，说明您已经完全同意本协议的各项内容。\n
   1.快递员获得账号以及密码，应妥善保管，因自身原因造成的账号、密码泄露导致的损失，由快递员承担；\n
   2.收件人凭借短信提取码取件，因收件人原因造成的提取码泄露导致的损失，由收件人承担；\n
   3.快递员应当保证收件人号码正确，因收件人号码不正确导致的错件、丢件，本公司不承担责任；\n
   4.收件人、快递员应保证投放到本产品内的快递符合我国相关法律规定；\n
   5.收件人、快递员存在恶意破坏本产品时，本公司保留对其追究法律责任的权利；\n</string>
    <string name="ex_scan_use_tag1">请用</string>
    <string name="ex_scan_use_tag2">微信扫描左侧二维码取件，</string>
    <string name="ex_scan_use_tag3">未关注请先扫描二维码关注格格快递。</string>
    <string name="ex_scan_use_bottom">        近期短信通道不稳定，许多用户反馈收不到短信验证码，为了您及时收件，请扫描上方的微信二维码，或搜索我们的微信号：格格快递（gegekd），
        如您没有微信，%s秒后可以进入密码取件页面</string>
    <string name="ex_scan_enter">立即进入</string>
    <string name="ex_deliver_choose">选择投递结果</string>
    <string name="ex_choose_yourself">手工选择箱门</string>
    <string name="ex_kuaidi">智能快递</string>
    <string name="ex_title_activity_dialog_web">DialogWebActivity</string>
    <string name="ex_hello_world">Hello world!</string>
    <string name="ex_action_settings">Settings</string>
    <string name="ex_orig_title">选择您所属的快递公司</string>
    <string name="ex_help_pickup">用户取件</string>
    <string name="ex_help_deliver">快递员派件</string>
    <string name="ex_help_faq">常见问题</string>
    <string name="ex_help_call">人工求助</string>
    <string name="mgt_admin_login">管理员登录</string>
    <string name="mgt_setting">设置</string>
    <string name="mgt_box_setting">箱体配置</string>
    <string name="mgt_box_manage">箱体管理</string>
    <string name="mgt_box_sequence">箱体唯一标识:</string>
    <string name="mgt_box_dot">版本(0:默认;1:演示版本; 3:银川版本;4:恒喜版本)</string>
    <string name="mgt_screen">0：正常；1：分屏（一个屏幕分成两个）；2：多屏（双屏）</string>
    <string name="mgt_box_cnt">副柜个数:</string>
    <string name="mgt_led_ip">LED IP:</string>
    <string name="mgt_led_port">LED端口:</string>
    <string name="mgt_camera_test">摄像头测试</string>
    <string name="mgt_audio_test">音频测试</string>
    <string name="mgt_led_test">LED测试</string>
    <string name="mgt_box_test">箱门测试</string>
    <string name="mgt_box_init">数据重读</string>
    <string name="mgt_disk">sd卡空间</string>
    <string name="mgt_restartapk">重启apk</string>
    <string name="mgt_reboot">重启os</string>
    <string name="mgt_query_sqlite">本地数据库</string>
    <string name="mgt_user_info">用户信息</string>
    <string name="mgt_deliver">未同步订单</string>
    <string name="mgt_box_info1">箱门信息</string>
    <string name="mgt_order">本地订单</string>
    <string name="mgt_alarm_info">告警信息</string>
    <string name="mgt_time_out_info">逾期件信息</string>
</resources>