<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="?attr/pub_top_nag_page">

    <com.ebox.pub.ui.customview.Title
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    
    <RelativeLayout
        android:id="@+id/rl_header"
        android:layout_width="match_parent"
        android:layout_height="70px"
        android:layout_below="@+id/title"
        android:background="@color/ex_hint_bg"
        android:gravity="center_vertical"
        android:paddingLeft="@dimen/pub_text_size_45_px"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/pub_white"
            android:textSize="24px"
            android:drawableLeft="@drawable/ex_pub_smile"
            android:text="@string/ex_tip_header"
            />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/iv_top"
        android:layout_width="fill_parent"
        android:layout_height="60px"
        android:layout_below="@+id/rl_header"
        android:background="@color/ex_box_normal"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_time"
            style="@style/ex_table_title"
            android:layout_weight="2"
            android:text="@string/ex_deliver_time" />

        <TextView
            android:id="@+id/tv_barcode"
            android:layout_weight="2"
            style="@style/ex_table_title"
            android:text="@string/ex_deliver_barcode" />

        <TextView
            android:id="@+id/tv_operatorId"
            style="@style/ex_table_title"
            android:layout_weight="2"
            android:text="@string/ex_deliver_phone" />

        <TextView
            android:id="@+id/tv_telephone"
            style="@style/ex_table_title"
            android:layout_weight="2"
            android:text="@string/ex_deliver_telephone" />

        <TextView
            android:id="@+id/tv_operate"
            style="@style/ex_table_title"
            android:layout_weight="3"
            android:text="@string/ex_operate" />
    </LinearLayout>

    <ListView
        android:id="@+id/item_list"
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:layout_below="@+id/iv_top"
        android:cacheColorHint="#000000"
       />

</RelativeLayout>
