<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent">

    <TextView
        android:id="@+id/tv_prompt"
        style="@style/ex_text_top_blue_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="92px"
        android:layout_marginTop="64px"
        android:text="@string/ex_change_pwd_prompt"/>

    <EditText
        android:id="@+id/et_pwd"
        style="?attr/input_normal"
        android:layout_below="@+id/tv_prompt"
        android:layout_marginLeft="92px"
        android:layout_marginTop="28px"
        android:hint="@string/ex_old_pwd"
        android:inputType="numberPassword"
        android:textStyle="normal"
        />

    <EditText
        android:id="@+id/et_verify"
        style="?attr/input_normal"
        android:layout_below="@+id/et_pwd"
        android:layout_marginLeft="92px"
        android:layout_marginTop="28px"
        android:hint="@string/ex_new_pwd"
        android:inputType="numberPassword"
        android:textStyle="normal"
        />

    <EditText
        android:id="@+id/et_verify_again"
        style="?attr/input_normal"
        android:layout_below="@+id/et_verify"
        android:layout_marginLeft="92px"
        android:layout_marginTop="28px"
        android:hint="@string/ex_new_pwd_again"
        android:inputType="numberPassword"
        android:textStyle="normal"
        />

    <com.ebox.pub.ui.customview.view.MaterialButton
        android:id="@+id/bt_ok"
        style="?attr/button_big"
        android:layout_below="@+id/et_verify_again"
        android:layout_marginLeft="92px"
        android:layout_marginTop="54px"
        android:text="@string/ex_confirm"/>


    <android.inputmethodservice.KeyboardView
        android:id="@+id/keyboard_view"
        style="?attr/keyboard_style"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
 />
</RelativeLayout>
