<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:paddingLeft="24px"
    android:paddingRight="20px">

    <LinearLayout
        android:id="@+id/iv_top"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30px"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_number"
            style="@style/ex_text_table_title"
            android:text="@string/ex_deliver_box" />

        <TextView
            android:id="@+id/tv_time"
            style="@style/ex_text_table_title"
            android:text="@string/ex_deliver_time" />

        <TextView
            android:id="@+id/tv_barcode"
            style="@style/ex_text_table_title"
            android:text="@string/ex_deliver_barcode" />

        <TextView
            android:id="@+id/tv_telephone"
            style="@style/ex_text_table_title"
            android:text="@string/ex_deliver_telephone" />

        <Button
            android:id="@+id/btn_deal"
            style="@style/ex_text_table_title"
            android:focusable="false"
            android:gravity="center_vertical" />
    </LinearLayout>

    <ListView
        android:id="@+id/item_list"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_below="@+id/iv_top"
        android:cacheColorHint="#000000"/>

</RelativeLayout>
